fixed header height on mobile

--- a/public/charts/css/style.css
+++ b/public/charts/css/style.css
@@ -1533,12 +1533,6 @@ footer{
 /*----------------------------------------------------------------------*/
 /* Layout
 /*----------------------------------------------------------------------*/
-
-
-header{
-	height:60px;
-	z-index:2;
-}
 nav{
 	position:absolute;
 	width:216px;
