--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@
 header{
 	background-color: #000;
 	color: #fff;
+	height: 100%;
 }
 
 header h1{
